--- a/theme/templates/blog/index.html
+++ b/theme/templates/blog/index.html
@@ -1,24 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
+<button type="button" class="py-3 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-slide-down-animation-modal" data-hs-overlay="#hs-slide-down-animation-modal">
+    Open modal
+  </button>
 <div class="flex flex-wrap justify-center mt-10">
     {% for post in posts %}
     <div class="p-4 max-w-sm">
-        <div class="flex rounded-lg h-full dark:bg-gray-800 bg-teal-400 p-8 flex-col">
+        <div class="flex rounded-lg h-full bg-teal-400 p-8 flex-col">
             <div class="flex items-center mb-3">
                 <div
-                    class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full dark:bg-indigo-500 bg-indigo-500 text-white flex-shrink-0">
+                    class="w-8 h-8 mr-3 inline-flex items-center justify-center rounded-full bg-indigo-500 text-white flex-shrink-0">
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                         stroke-width="2" class="w-5 h-5" viewBox="0 0 24 24">
                         <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
                     </svg>
                 </div>
-                <h2 class="text-white dark:text-white text-lg font-medium">{{ post.title }}</h2>
+                <h2 class="text-white text-lg font-medium">{{ post.title }}</h2>
             </div>
             <div class="flex flex-col justify-between flex-grow">
-                <p class="leading-relaxed text-base text-white dark:text-gray-300">
+                <p class="leading-relaxed text-base text-white">
                     {{ post.body|truncatewords:50 }}
                 </p>
-                <a href="#" class="mt-3 text-black dark:text-white hover:text-blue-600 inline-flex items-center">Learn More
+                <a href="{{ post.get_absolute_url }}" class="mt-3 text-black hover:text-blue-600 inline-flex items-center">Learn More
                     <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
                         stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                         <path d="M5 12h14M12 5l7 7-7 7"></path>
@@ -28,5 +31,37 @@
         </div>
     </div>
     {% endfor %} 
+    {% include "includes/pagination.html" with page=posts %}
+
+      <div id="hs-slide-down-animation-modal" class="hs-overlay hidden size-full fixed top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto pointer-events-none" role="dialog" tabindex="-1" aria-labelledby="hs-slide-down-animation-modal-label">
+        <div class="hs-overlay-animation-target hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all sm:max-w-lg sm:w-full m-3 sm:mx-auto">
+          <form class="flex flex-col bg-white border shadow-sm rounded-xl pointer-events-auto" method="post">
+            {% csrf_token %}
+            <div class="flex justify-between items-center py-3 px-4 border-b">
+              <h3 id="hs-slide-down-animation-modal-label" class="font-bold text-gray-800">
+                Modal title
+              </h3>
+              <button type="button" class="size-8 inline-flex justify-center items-center gap-x-2 rounded-full border border-transparent bg-gray-100 text-gray-800 hover:bg-gray-200 focus:outline-none focus:bg-gray-200 disabled:opacity-50 disabled:pointer-events-none" aria-label="Close" data-hs-overlay="#hs-slide-down-animation-modal">
+                <span class="sr-only">Close</span>
+                <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M18 6 6 18"></path>
+                  <path d="m6 6 12 12"></path>
+                </svg>
+              </button>
+            </div>
+            <div class="p-4 overflow-y-auto">
+                {{ form.as_p }}
+            </div>
+            <div class="flex justify-end items-center gap-x-2 py-3 px-4 border-t">
+              <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none" data-hs-overlay="#hs-slide-down-animation-modal">
+                Close
+              </button>
+              <button type="submit" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none">
+                Save changes
+              </button>
+            </div>
+          </form>
+        </div>
+      </div>
 </div>
 {% endblock content %}
