--- a/theme/templates/blog/posts/index.html
+++ b/theme/templates/blog/posts/index.html
@@ -1,8 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
+<div class="flex flex-wrap justify-between mt-10">
 <button type="button" class="py-3 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" aria-haspopup="dialog" aria-expanded="false" aria-controls="hs-slide-down-animation-modal" data-hs-overlay="#hs-slide-down-animation-modal">
     Open modal
-  </button>
+  </button> 
+
+  <button type="button" class="py-3 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none">
+    <a href="{% url 'blog:create_post' %}">Creer un post</a>
+  </button> 
+</div>
 <div class="flex flex-wrap justify-center mt-10">
     {% for post in posts %}
     <div class="p-4 max-w-sm">
@@ -31,7 +37,6 @@
         </div>
     </div>
     {% endfor %} 
-    {% include "includes/pagination.html" with page=posts %}
 
       <div id="hs-slide-down-animation-modal" class="hs-overlay hidden size-full fixed top-0 start-0 z-[80] overflow-x-hidden overflow-y-auto pointer-events-none" role="dialog" tabindex="-1" aria-labelledby="hs-slide-down-animation-modal-label">
         <div class="hs-overlay-animation-target hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all sm:max-w-lg sm:w-full m-3 sm:mx-auto">
@@ -63,5 +68,8 @@
           </form>
         </div>
       </div>
+</div>
+<div class="flex float-end align-bottom me-8">
+  {% include "includes/pagination.html" with page=posts %}
 </div>
 {% endblock content %}
