--- a/theme/templates/blog/posts/show.html
+++ b/theme/templates/blog/posts/show.html
@@ -7,7 +7,7 @@
     {{ post.publish}}
     {{ post.author }}
     <p>
-        <a href="{% url 'blog:share' post.uuid %}">
+        <a href="{% url 'blog:share_post' post.uuid %}">
         Share this post
         </a>
     </p>
